Create first media queries and responsive design

--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     </head>
 
     <body>
-        <div class="navbar">
-            <div class="navbar-content">
-                <img class="logo" src="./assets/logo-ministerio-modernizacion.png" alt="Ministerio de Modernización Presidencia de la Nación">
-                <span class="redes">
-                    <p class="comparti">Compartí</p>
-                    <img style="width: 35px;" src="./assets/twitter.svg" alt="twitter">
-                    <img style="width: 15px" src="./assets/face.svg" alt="facebook">
-                </span>
+        <div class="navbar-container">
+            <div class="navbar">
+                <div class="navbar-content">
+                    <img class="logo" src="./assets/logo-ministerio-modernizacion.png" alt="Ministerio de Modernización Presidencia de la Nación">
+                    <span class="redes">
+                        <p class="comparti">Compartí</p>
+                        <img style="width: 35px;" src="./assets/twitter.svg" alt="twitter">
+                        <img style="width: 15px" src="./assets/face.svg" alt="facebook">
+                    </span>
+                </div>
             </div>
         </div>
-
         <!-- layer picker -->
 
         <div class="scroll-buttons-container">
@@ -83,21 +84,21 @@
                     </div>
 
                     <!-- SECTION TWO -->
-                    <div class="secTwo">
+                    <div class="secTwo count">
                         <h2 class="title-secOne fade-waiting">Lorem ipsum dolor sit ipsum dolor sit</h2>
                         <span class="paragraph-secTwo fade-waiting">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                             et dolore magna aliqua.</span>
                         <div class="block-a fade-waiting">
                             <h3>SUBTITULO</h3>
-                            <span class="number">3056</span>
+                            <span id="number1" class="number">3056</span>
                         </div>
                         <div class="block-b fade-waiting">
                             <h3>SUBTITULO</h3>
-                            <span class="number">23353432</span>
+                            <span id="number2" class="number">23353432</span>
                         </div>
                         <div class="block-c fade-waiting">
                             <h3>SUBTITULO</h3>
-                            <span class="number">124</span>
+                            <span id="number3" class="number">124</span>
                         </div>
                     </div>
 
