Create zoom in and out transitions and arrow functionality

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Vuelos</title>
+        <link rel="shortcut icon" href="https://argob.github.io/poncho/favicon.ico">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
         <link rel="stylesheet" href="./css/main.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -21,8 +22,8 @@
                     <img class="logo" src="./assets/logo-ministerio-modernizacion.png" alt="Ministerio de Modernización Presidencia de la Nación">
                     <span class="redes">
                         <p class="comparti">Compartí</p>
-                        <img style="width: 35px;" src="./assets/twitter.svg" alt="twitter">
-                        <img style="width: 15px" src="./assets/face.svg" alt="facebook">
+                        <img id="twitter" style="width: 35px;" src="./assets/twitter.svg" alt="twitter">
+                        <img id="facebook" style="width: 15px" src="./assets/face.svg" alt="facebook">
                     </span>
                 </div>
             </div>
@@ -31,10 +32,10 @@
 
         <div class="scroll-buttons-container">
             <span id="scroll-down" class="button-scroll">
-                <img class="arrow-down" src="./assets/flecha.svg" alt="scroll down">
+                <img id="arrow-down" class="arrow-down" src="./assets/flecha.svg" alt="scroll down">
             </span>
             <span id="scroll-up" class="button-scroll">
-                <img class="arrow-up" src="./assets/flecha.svg" alt="scroll down">
+                <img id="arrow-up" class="arrow-up" src="./assets/flecha.svg" alt="scroll down">
             </span>
         </div>
 
