--- a/index.html
+++ b/index.html
@@ -15,19 +15,30 @@
         <!-- Load Leaflet CSS -->
         <link href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" rel="stylesheet">
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-        <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.12/themes/css/cartodb.css" />
-
+        <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
         <link rel="stylesheet" href="./css/leaflet.css">
         <!-- TEST -->
         <script type="cartocss/text" id="cartocss">
-            #layer {
-                marker-width: 7;
-                marker-fill: #EE4D5A;
+            Map {
+                -torque-frame-count: 729;
+                -torque-animation-duration: 60;
+                -torque-time-attribute: "rowid";
+                -torque-aggregation-function: "count(1)";
+                -torque-resolution: 1;
+                -torque-data-aggregation: linear;
+              }
+              #layer {
+                marker-width: 1;
+                marker-fill: #4dd9ee;
                 marker-fill-opacity: 0.9;
-                marker-allow-overlap: true;
-                marker-line-width: 1;
+                marker-line-width: 0;
                 marker-line-color: #FFFFFF;
                 marker-line-opacity: 1;
+                comp-op: lighter;
+              }
+              #layer[offset=1] {
+                marker-width: 3;
+                marker-fill-opacity: 0.45;
               }
         </script>
     </head>
@@ -78,6 +89,7 @@
                         <span id="all" class="button button-active">VER TODOS</span>
                     </span>
                 </span>
+
             </div>
             <div class="section section-four">
                 <span class="selector selector-two">
@@ -88,6 +100,7 @@
                     </span>
                 </span>
                 <span id="iframe"></span>
+                <!-- <div id="mapThree"></div> -->
 
 
             </div>
@@ -144,7 +157,7 @@
         </div>
 
         <!-- Load Leaflet and Carto libraries -->
-        <script src="http://libs.cartocdn.com/cartodb.js/v3/3.12/cartodb.js"></script>
+        <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
         <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
         <script src="https://cartodb-libs.global.ssl.fastly.net/carto.js/v4.0.0-beta/carto.min.js"></script>
         <!-- include cartodb.js library -->
