--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Vuelos</title>
         <link rel="shortcut icon" href="https://argob.github.io/poncho/favicon.ico">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1"
+            crossorigin="anonymous">
+
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+
+
+
+
+
+
         <link rel="stylesheet" href="./css/main.css">
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.8.1.js" integrity="sha256-e6rn3uRMD1/JU+Fd/OYCf2OSFcUOXHQlkCL0rYR/JUM=" crossorigin="anonymous"></script> -->
@@ -17,30 +26,7 @@
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
         <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
         <link rel="stylesheet" href="./css/leaflet.css">
-        <!-- TEST -->
-        <script type="cartocss/text" id="cartocss">
-            Map {
-                -torque-frame-count: 729;
-                -torque-animation-duration: 60;
-                -torque-time-attribute: "rowid";
-                -torque-aggregation-function: "count(1)";
-                -torque-resolution: 1;
-                -torque-data-aggregation: linear;
-              }
-              #layer {
-                marker-width: 1;
-                marker-fill: #4dd9ee;
-                marker-fill-opacity: 0.9;
-                marker-line-width: 0;
-                marker-line-color: #FFFFFF;
-                marker-line-opacity: 1;
-                comp-op: lighter;
-              }
-              #layer[offset=1] {
-                marker-width: 3;
-                marker-fill-opacity: 0.45;
-              }
-        </script>
+
     </head>
 
     <body>
@@ -52,8 +38,24 @@
                     <img class="logo" src="./assets/logo-ministerio-modernizacion.png" alt="Ministerio de Modernización Presidencia de la Nación">
                     <span class="redes">
                         <p class="comparti">Compartí</p>
-                        <img id="twitter" style="width: 35px;" src="./assets/twitter.svg" alt="twitter">
-                        <img id="facebook" style="width: 15px" src="./assets/face.svg" alt="facebook">
+                        <!-- <img id="twitter" style="width: 35px;" src="./assets/twitter.svg" alt="twitter">
+                        <img id="facebook" style="width: 15px" src="./assets/face.svg" alt="facebook"> -->
+
+                        <!-- <a href="https://medium.com/datos-argentina" target="_blank" class="pull-right">
+                            <i class="fa fa-medium fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://github.com/datosgobar" target="_blank" class="pull-right">
+                            <i class="fa fa-github-alt fa-2x" aria-hidden="true"></i>
+                        </a> -->
+                        <a href="https://twitter.com/datosgobar" target="_blank" class="pull-right">
+                            <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://www.facebook.com/GobAbiertoAR/" target="_blank" class="pull-right">
+                            <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <!-- <a href="http://datos.gob.ar/" target="_blank" class="pull-right">
+                            DATOS.GOB.AR
+                        </a> -->
                     </span>
                 </div>
             </div>
@@ -127,49 +129,119 @@
 
                     <!-- SECTION ONE -->
                     <div class="secOne">
-                        <h2 class="title-secOne fade-waiting">Lorem ipsum dolor sit ipsum dolor sit</h2>
-                        <div class="planeOne fade-waiting">
-                            <img class="plane-icon" src="./assets/icono_avion.svg" alt="avion">
-                            <h3>SUBTITULO</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur.</p>
-                        </div>
-                        <div class="planeTwo fade-waiting">
-                            <img class="plane-icon" src="./assets/icono_avion.svg" alt="avion">
-                            <h3>SUBTITULO</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
-                        <div class="planeThree fade-waiting">
-                            <img class="plane-icon" src="./assets/icono_avion.svg" alt="avion">
-                            <h3>SUBTITULO</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="secOne-content">
+                            <div class="secOne-text-container">
+                                <div class="secOne-title">
+                                    Destinos internacionales más volados desde Argentina
+                                </div>
+                                <div class="secOne-paragraph">
+                                    Ciudades a dónde más se vuela desde la Argentina en 2017, en porcentajes. Lorem ipsum dolor sit amet, consectetur adipiscing
+                                    elit. Proin et turpis odio.
+                                </div>
+                            </div>
+                            <img class="vuelos-internacionales-svg" src="./assets/provisorios/vuelos_internacionales-01.svg" alt="">
                         </div>
                     </div>
 
                     <!-- SECTION TWO -->
                     <div class="secTwo count">
-                        <h2 class="title-secOne fade-waiting">Lorem ipsum dolor sit ipsum dolor sit</h2>
-                        <span class="paragraph-secTwo fade-waiting">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua.</span>
-                        <div class="block-a fade-waiting">
-                            <h3>SUBTITULO</h3>
-                            <span id="number1" class="number">3056</span>
-                        </div>
-                        <div class="block-b fade-waiting">
-                            <h3>SUBTITULO</h3>
-                            <span id="number2" class="number">23353432</span>
-                        </div>
-                        <div class="block-c fade-waiting">
-                            <h3>SUBTITULO</h3>
-                            <span id="number3" class="number">124</span>
+                        <div class="secOne-content secOne-content-two">
+
+                            <img class="vuelos-nacionales-svg" src="./assets/provisorios/vuelos_nacionales-01.svg" alt="">
+                            <div class="secOne-text-container">
+                                <div class="secOne-title">
+                                    Destinos internos más volados
+                                </div>
+                                <div class="secOne-paragraph">
+                                    Ciudades a dónde más se vuela dentro de Argentina en 2017, en porcentajes. Lorem ipsum dolor sit amet, consectetur adipiscing
+                                    elit. Proin et turpis odio.
+
+                                </div>
+                            </div>
                         </div>
                     </div>
 
                     <!-- SECTION THREE -->
-                    <div class="secThree"></div>
+                    <div class="secThree">
+                        <div class="secThree-content">
+                            <div class="secThree-title">Cuánto se incrementaron los vuelos</div>
+                            <div class="grafico-torta-container">
+                                <img class="torta tortaOne" src="./assets/provisorios/grafico_torta-01.svg" alt="">
+                                <img class="torta" src="./assets/provisorios/grafico_torta-01.svg" alt="">
+                                <img class="torta" src="./assets/provisorios/grafico_torta-01.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- SECTION FOUR -->
-                    <div class="secFour"></div>
+                    <div class="secFour">
+                        <div class="secFour-content">
+                            <div class="secFour-title">
+                                Vuelos en relación al clima
+                            </div>
+                            <div class="secFour-paragraph">
+                                <span class="secFour-subtitle">San Carlos de Bariloche</span>
+                                La mayor cantidad de vuelos a este destino se registraron en los dias de más frio.
+                            </div>
+                            <img class="grafico-lineas-bariloche" src="./assets/provisorios/grafico_lineas_bariloche-01.svg" alt="">
+                            <div class="secFour-paragraph">
+                                <span class="secFour-subtitle subtitle-two">Puerto Iguazú</span>
+                                La mayor cantidad de vuelos a este destino se registraron en los dias de más calor.
+                            </div>
+                            <img class="grafico-lineas-bariloche" src="./assets/provisorios/grafico_lineas_iguazu-01.svg" alt="">
+                        </div>
+                    </div>
                     <!-- SECTION FIVE -->
-                    <div class="secFive"></div>
+                    <div class="secFive">
+                        <div class="secFive-content">
+                            <div class="secFive-title">
+                                ¿Querés saber más sobre este tema?
+                            </div>
+                            <div class="verCuriosidades-button">
+                                VER CURIOSIDADES
+                            </div>
+                            <div class="secFive-paragraph">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                <strong>tempor incididunt ut labore</strong> et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </div>
+                            <span class="escribenos">¿Encontraste algún error? Por favor,
+                                <a href="#" style="color: rgb(80, 146, 213)">escribinos</a>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="secSix">
+                        <div class="secSix-content">
+                            <div class="secSix-left">
+                                <span class="redes-secSix">
+                                    <a href="https://medium.com/datos-argentina" target="_blank" class="pull-right">
+                                        <i class="fa fa-medium fa-2x" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="https://github.com/datosgobar" target="_blank" class="pull-right">
+                                        <i class="fa fa-github-alt fa-2x" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="https://twitter.com/datosgobar" target="_blank" class="pull-right">
+                                        <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="https://www.facebook.com/GobAbiertoAR/" target="_blank" class="pull-right">
+                                        <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+                                    </a>
+                                </span>
+                                <img class="secSix-logo" src="./assets/logo-ministerio-modernizacion.png" alt="Ministerio de modernización">
+                            </div>
+                            <div class="secSix-right">
+                                <ul>
+                                    <li style="margin-bottom: 10px;">
+                                        <a href="#">Contactanos</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Nuestro equipo</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
