Create media queries

--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 
 
 
-
-
-
         <link rel="stylesheet" href="./css/main.css">
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.8.1.js" integrity="sha256-e6rn3uRMD1/JU+Fd/OYCf2OSFcUOXHQlkCL0rYR/JUM=" crossorigin="anonymous"></script> -->
@@ -92,10 +89,10 @@
                         </div>
                         <span class="button-container fade-waiting">
                             <span id="internacional" class="button">
-                                <span class="circle-indicator circle-internacionales"></span>Vuelos internacionales</span>
+                                <span class="circle-indicator circle-internacionales"></span>Internacionales</span>
                             <span id="local" class="button">
-                                <span class="circle-indicator circle-locales"></span>Vuelos locales</span>
-                            <span id="all" class="button button-active">Ver todos</span>
+                                <span class="circle-indicator circle-locales"></span>Locales</span>
+                            <span id="all" class="button button-active">Todos</span>
                         </span>
                     </div>
                 </span>
@@ -174,7 +171,7 @@
                     </div>
 
                     <!-- SECTION FOUR -->
-                    <div class="secFour">
+                    <div class="secFour wait-fade-arrow">
                         <div class="secFour-content">
                             <div class="secFour-title">
                                 Vuelos en relación al clima
@@ -183,12 +180,16 @@
                                 <span class="secFour-subtitle">San Carlos de Bariloche</span>
                                 La mayor cantidad de vuelos a este destino se registraron en los dias de más frio.
                             </div>
-                            <img class="grafico-lineas-bariloche" src="./assets/provisorios/grafico_lineas_bariloche-01.svg" alt="">
+                            <img class="grafico-lineas-bariloche" src="./assets/provisorios/grafico_lineas_bariloche-01.svg" alt="grafico vuelos a bariloche según el clíma">
+                            <!-- mobile graph -->
+                            <img class="grafico-lineas-bariloche-mobile" src="./assets/provisorios/bariloche_mobile.svg" alt="grafico vuelos a bariloche según el clíma">
                             <div class="secFour-paragraph">
                                 <span class="secFour-subtitle subtitle-two">Puerto Iguazú</span>
                                 La mayor cantidad de vuelos a este destino se registraron en los dias de más calor.
                             </div>
-                            <img class="grafico-lineas-bariloche" src="./assets/provisorios/grafico_lineas_iguazu-01.svg" alt="">
+                            <img class="grafico-lineas-iguazu" src="./assets/provisorios/grafico_lineas_iguazu-01.svg" alt="grafico vuelos a Iguazú según el clíma">
+                            <!-- mobile graph -->
+                            <img class="grafico-lineas-iguazu-mobile" src="./assets/provisorios/iguazu_mobile.svg" alt="grafico vuelos a Iguazú según el clíma">
                         </div>
                     </div>
                     <!-- SECTION FIVE -->
@@ -233,10 +234,10 @@
                             <div class="secSix-right">
                                 <ul>
                                     <li style="margin-bottom: 10px;">
-                                        <a href="#">Contactanos</a>
+                                        <a href="mailto:datos@modernizacion.gob.ar">Contactanos</a>
                                     </li>
                                     <li>
-                                        <a href="#">Nuestro equipo</a>
+                                        <a href="https://datosgobar.github.io/" target="_blank">Nuestro equipo</a>
                                     </li>
                                 </ul>
                             </div>
