--- a/index.html
+++ b/index.html
@@ -248,8 +248,9 @@
         </div>
 
         <!-- Load Leaflet and Carto libraries -->
-        <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
-        <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+        <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/leaflet@1.3.1/dist/leaflet-src.min.js"></script>
         <script src="https://cartodb-libs.global.ssl.fastly.net/carto.js/v4.0.0-beta/carto.min.js"></script>
         <!-- include cartodb.js library -->
         <!-- <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script> -->
