--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         <script src="https://code.jquery.com/jquery-1.8.1.js" integrity="sha256-e6rn3uRMD1/JU+Fd/OYCf2OSFcUOXHQlkCL0rYR/JUM=" crossorigin="anonymous"></script> -->
 
         <!-- Load Leaflet CSS -->
-        <link href="http://unpkg.com/leaflet@1.3.1/dist/leaflet.css" rel="stylesheet">
+        <link href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" rel="stylesheet">
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
         <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
         <link rel="stylesheet" href="./css/leaflet.css">
@@ -248,9 +248,8 @@
         </div>
 
         <!-- Load Leaflet and Carto libraries -->
-        <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
-
-        <script src="https://cdn.jsdelivr.net/npm/leaflet@1.3.1/dist/leaflet-src.min.js"></script>
+        <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
+        <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
         <script src="https://cartodb-libs.global.ssl.fastly.net/carto.js/v4.0.0-beta/carto.min.js"></script>
         <!-- include cartodb.js library -->
         <!-- <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script> -->
