Add title and subtitle

--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
         <div id="content" class="content">
             <div class="section section-one">
                 <div class="title-content fade-waiting">
-                    <span class="title">Lorem ipsum dolor sit amet</span>
-                    <span class="title-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua.</span>
+                    <span class="title">Los argentinos más conectados</span>
+                    <span class="title-paragraph">El sector aerocomercial argentino continúa creciendo con el foco en potenciar la conectividad y la federalización. Mirá cómo fueron todos los vuelos del año.</span>
                 </div>
                 <div id="mapOne"></div>
             </div>
